# lychrel

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  sonar-project.properties
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yaml  build_and_release.yaml  release.yaml  static_analysis.yaml  test.yaml
docs/: algorithms.md  api.md  contributing.md  examples.md  index.md  performance.md  requirements.txt  usage.md
docs/source/: algorithms.rst  api.rst  conf.py  contributing.rst  examples.rst  index.rst  performance.rst  usage.rst
lychrel/: __init__.py  py.py
src/: collatz.rs  lib.rs  util.rs
tests/: test_benchmark.py  test_collatz.py  test_fibonacci.py  test_kaprekar.py  test_look_and_say.py  test_lychrel_numbers.py  test_palindrome.py  test_pq_fibonacci.py  test_read_out_loud.py  test_reverse_and_add.py
