[package]
name = "lychrel"
version = "0.4.1"
authors = ["Alessio Sanfratello <sanfra90@gmail.com>"]
edition = "2018"
description = "A collection of functions to play with Lychrel numbers and other funny mathematical problems"
readme = "README.md"
homepage = "https://github.com/alesanfra/lychrel"
repository = "https://github.com/alesanfra/lychrel"
license-file = "LICENSE"

[dependencies]
pyo3 = { version = "*", features = ["num-bigint", "extension-module"] }
num-traits = "*"
num-bigint = "*"

[lib]
name = "lychrel"
crate-type = ["cdylib"]
