[build-system]
requires = ["maturin>=1"]
build-backend = "maturin"

[project]
name = "lychrel"
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics"
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v -m \"not benchmark\""
testpaths = ["tests"]
markers = [
    "benchmark: perform benchmarks against an equivalent python implementation",
]
