[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "lychrel"
authors = [
    { name = "Alessio Sanfratello", email = "sanfra90@gmail.com" },
]
description = "A collection of functions to play with Lychrel numbers and other funny mathematical problems"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dynamic = [
    'version'
]

[project.urls]
Homepage = "https://github.com/alesanfra/lychrel"
Source = "https://github.com/alesanfra/lychrel"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v -m \"not benchmark\""
testpaths = ["tests"]
markers = [
    "benchmark: perform benchmarks against an equivalent python implementation",
]
